<resources>
<string name="advanced_settings_log_level_none">Disabled</string>
<string name="label_data_note">Notes</string>
<string name="label_street">Street</string>
<string name="dialog_refresh_which">Reset which way?</string>
<string name="menu_cancel_sync">\u540C\u6B65\u6570\u636E..</string>
<string name="home_disabled">Disabled</string>
<string name="home_not_available">Never synchronized</string>
<string name="word_at">at</string>
<string name="dialog_refresh_to">From device to server</string>
<string name="dialog_import_contacts_first">We recommend that you import your contacts from other address book accounts listed below:</string>
<string name="notification_online_quota_full_server_title">__APP_NAME__ warning</string>
<string name="attachToContact">Contact icon</string>
<string name="menu_close">Close</string>
<string name="status_partial_failure">Sync not completed</string>
<string name="notification_sync_in_progress_message">Click to view</string>
<string name="type_files">Files</string>
<string name="label_other">Other</string>
<string name="advanced_settings_import_title">Import Contacts</string>
<string name="sendlog_post_url">http://10.4.192.52/logApp/postLogs.php</string>
<string name="dialog_import_sim_contacts">SIM contacts</string>
<string name="advanced_settings_log_info">More detailed logging should be used if you encounter any issues.</string>
<string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
<string name="sync_mode_automatically">Automatically</string>
<string name="advanced_settings_band_saver_title">Bandwidth Saver</string>
<string name="message_nothing_to_sync">You have not chosen to sync any categories.  Please configure the client</string>
<string name="label_type_spouse">Spouse</string>
<string name="message_contact_saved">Contact saved</string>
<string name="status_sd_card_unavailable">SD Card not available</string>
<string name="label_data_website">Website</string>
<string name="advanced_settings_dev_settings_title">App Internals</string>
<string name="press_exit">\u518D\u6309\u4E00\u6B21\u79BB\u5F00\u667A\u6167\u4E91</string>
<string name="label_data_event">Event</string>
<string name="status_mapping_done">Ending...</string>
<string name="message_no_signal">\u7F51\u7EDC\u4E0D\u7ED9\u529B</string>
<string name="home_source_title_prefix">\u540C\u6B65</string>
<string name="dialog_server_full">You have reached your account\'s storage limit and cannot sync more media and files.\n\nTo upgrade for more storage, login to your online account using your computer.</string>
<string name="label_middle_name">Middle name</string>
<string name="pim_sync_running_state_tips">\u6B63\u5728\u540C\u6B65,\u8BF7\u7A0D\u5019\u2026</string>
<string name="sync_direction_do_nothing">Do nothing</string>
<string name="status_cancelled">Cancelled</string>
<string name="dialog_slow_text2">.  This process may take several minutes, and can use a lot of network bandwidth.  Are you sure you want to continue? (Yes in 20 seconds...)</string>
<string name="conf_sync_mode_title">Sync with server</string>
<string name="dialog_slow_text1">The server has requested a full sync for </string>
<string name="status_connecting">Connecting...</string>
<string name="signup_continue_button">CONTINUE</string>
<string name="dialog_try_later">Try later</string>
<string name="word_yesterday">Yesterday</string>
<string name="close_button">Close</string>
<string name="label_city">City</string>
<string name="label_data_address">Postal address</string>
<string name="label_select">Select label</string>
<string name="sync_files_folder_label">The files in the folder below are synched from your phone to the server</string>
<string name="description_eben_web">\u7535\u8111\u767B\u5F55yun.eben.cn\u67E5\u770B\u7BA1\u7406\u4E2A\u4EBA\u6570\u636E</string>
<string name="menu_save">Save</string>
<string name="sync_pictures_folder_label">The pictures in the folder below are synched from your phone to the server</string>
<string name="label_contact_edit">Edit contact</string>
<string name="message_config_error_save">Save failed</string>
<string name="signup_failed_network">Oops! The server cannot be reached. Check the server URL is right, ensure you have sufficient network coverage and try again.</string>
<string name="sync_mode_scheduled">Scheduled</string>
<string name="checking_credentials_title">\u767B\u5F55\u4E2D ...</string>
<string name="advanced_settings_view_log_button_label">View Log</string>
<string name="signup_help_text">Enter your phone number and choose a password for this account.</string>
<string name="description_two_way_picture">Pictures are uploaded from and downloaded to your device\'s media gallery. Pictures in a format that cannot be displayed by your device may be viewed using third party viewers.</string>
<string name="conf_upload_older_media">Upload older __source__</string>
<string name="signup_failed_username_exists">Oops! This phone number is already used by an existing account. Choose a different username to create a new account or, if you already have an account, use your username and password to login.</string>
<string name="deleteConfirmation_title">Delete</string>
<string name="dialog_delete2">. If you select yes, this data will be deleted on the server.  Do you want to sync these deletes?</string>
<string name="dialog_delete1">This application has detected a large number of deleted data for: </string>
<string name="sync_in_progress_dialog_save">Please wait until the sync has completed to change settings.</string>
<string name="dialog_import_error">There were errors during import.</string>
<string name="label_data_relation">Relation</string>
<string name="label_neighborhood">Neighborhood</string>
<string name="upg_one_way_no_longer_supported">IMPORTANT: Your client settings indicate that you were performing one-way sync for some PIM data. In the latest version of our clients, the option to choose one-way sync is no longer available and all syncs of PIM data (e.g. contacts, calendar) will be two-way only. As a precautionary measure, we have disabled sync for the data types that you were synching one-way. You may re-enable them at any time from Settings. Please note that once re-enabled, future syncs of PIM data will be two-way, affecting data both on the server and on the client. Once you have read and understood the information above, click Ok to enter the client.</string>
<string name="sync_mode_manual">Manual</string>
<string name="dialog_import_no_items">There are no contacts to import.</string>
<string name="dialog_cancel">Cancel</string>
<string name="conf_hour">hour</string>
<string name="message_contact_deleted">Contact deleted</string>
<string name="dialog_refresh_warn2">After you select a direction, you will be able to select a category. </string>
<string name="dialog_sync_now">Sync now</string>
<string name="status_no_space_on_device">Insufficient device storage</string>
<string name="signup_failed_invalid_captcha">Oops! The code you entered did not match. Try again!</string>
<string name="description_two_way_video">Videos are uploaded from and downloaded to your device\'s media gallery. Videos in a format that cannot be played by your device may be played using third party media player applications. Maximum size is 100 MBs per video.</string>
<string name="label_contact_insert">Create contact</string>
<string name="label_pobox">PO box</string>
<string name="videos_provider_label">Videos</string>
<string name="signup_failed_bad_phone_message">Oops! Phone number is not valid.  The phone number may only contain the following characters: numbers (0-9), \'.\', \'-\', \'(\', \')\', x. The username must be at least 9 characters and at most 15 characters long.</string>
<string name="signup_phone_number">PHONE NO.</string>
<string name="status_network_error">Network Error</string>
<string name="pim_backups_info">\u5F00\u542F\u540C\u6B65\uFF0C\u624B\u673A\u8054\u7CFB\u4EBA\u5C06\u81EA\u52A8\u5907\u4EFD\u5230\u4E91\u7AEF</string>
<string name="advanced_settings_reset_info">A reset will replace all data on the client with data from the server or vice versa.</string>
<string name="status_confirm_slow">Full sync in progress</string>
<string name="signup_plus">+</string>
<string name="label_name_prefix">Name prefix</string>
<string name="label_office_location">Office location</string>
<string name="conf_save_bandwidth_description">With Bandwidth Saver enabled, all automatic syncs of pictures, videos and files will be transferred over Wi-Fi only.</string>
<string name="label_unknown">Unknown</string>
<string name="label_more">More</string>
<string name="settings_saved">Settings saved</string>
<string name="signup_signing_up">Creating your account...</string>
<string name="revert_button">Revert</string>
<string name="files_provider_label">Files</string>
<string name="notification_storage_full_device_title">__APP_NAME__ warning</string>
<string name="auto_contacts">\u901A\u8BAF\u5F55\u81EA\u52A8\u540C\u6B65\u5DF2\u5F00\u542F</string>
<string name="status_complete_failure">Last sync failed</string>
<string name="advanced_settings_log_level_trace">Trace</string>
<string name="signup_succeeded_no_password">Congratulations! You\'re now signed up and can sync! Please record your username \"__USERNAME__\" for future reference.</string>
<string name="status_sync">Syncing</string>
<string name="about_version">Version</string>
<string name="conf_hours">hours</string>
<string name="conf_day">day</string>
<string name="status_recover">Resetting...</string>
<string name="dialog_import_contacts_later">You may import your contacts from other address book accounts listed below:</string>
<string name="advanced_settings_dev_settings_info">These settings should only be changed by Advanced users familiar with the inner workings of the application. Under normal circumstances, you would not need to change these settings.</string>
<string name="settings_changed_alert">Do you want to save changes?</string>
<string name="description_download_video">Videos are downloaded to your device\'s media gallery. Videos in a format that cannot be played by your device may be played using third party media player applications. Maximum size is 100 MBs per video.</string>
<string name="dialog_continue">Continue</string>
<string name="dialog_save">Do you want to save?</string>
<string name="advanced_settings_reset_title">Reset</string>
<string name="login_signup_label">Don\'t have an account?</string>
<string name="notification_sync_in_progress_ticker_started">Sync started</string>
<string name="advanced_settings_log_level_debug">Debug</string>
<string name="conf_upload_older_media_warning">Uploading your older __source__ may consume lots of your online account storage. It is recommended for premium accounts only.</string>
<string name="menu_sync">Sync</string>
<string name="label_account_contact"> __ACCOUNT_LABEL__ contact</string>
<string name="type_notes">Notes</string>
<string name="description_file">Maximum size is 25 MBs per file.</string>
<string name="signup_button">SIGN UP</string>
<string name="sync_url_label">SERVER URL</string>
<string name="pim_recover_info">\u65B0\u624B\u673A\u5F00\u542F\u6B64\u8BBE\u7F6E\u540E\uFF0C\u901A\u8BAF\u5F55\u4F1A\u81EA\u52A8\u6062\u590D\u5230\u624B\u673A</string>
<string name="login_help_text">\u8F93\u5165E\u672C\u8D26\u53F7\u4E0E\u5BC6\u7801</string>
<string name="pw_hint">\u5BC6\u7801</string>
<string name="user_hint">\u90AE\u7BB1/\u624B\u673A\u53F7\u7801</string>
<string name="login_button">\u767B\u5F55</string>
<string name="usr_label">\u7528\u6237</string>
<string name="pim_synchro">\u901A\u8BAF\u5F55\u81EA\u52A8\u540C\u6B65</string>
<string name="eben_show_pw">\u663E\u793A\u5BC6\u7801</string>
<string name="pim_sync_init_state_tips">\u7ACB\u5373\u540C\u6B65,\u901A\u8BAF\u5F55\u5B58\u4E8E\u4E91\u7AEF,\u5B89\u5168\u4E0D\u4E22\u5931</string>
<string name="psw_label">\u5BC6\u7801</string>
</resources>