<?xml version="1.0" encoding="utf-8"?>
<!--
 * Funambol is a mobile platform developed by Funambol, Inc.
 * Copyright (C) 2009 Funambol, Inc.
 *
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU Affero General Public License version 3 as published by
 * the Free Software Foundation with the addition of the following permission
 * added to Section 15 as permitted in Section 7(a): FOR ANY PART OF THE COVERED
 * WORK IN WHICH THE COPYRIGHT IS OWNED BY FUNAMBOL, FUNAMBOL DISCLAIMS THE
 * WARRANTY OF NON INFRINGEMENT  OF THIRD PARTY RIGHTS.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 * details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program; if not, see http://www.gnu.org/licenses or write to
 * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 * MA 02110-1301 USA.
 *
 * You can contact Funambol, Inc. headquarters at 643 Bair Island Road, Suite
 * 305, Redwood City, CA 94063, USA, or at email address info@funambol.com.
 *
 * The interactive user interfaces in modified source and object code versions
 * of this program must display Appropriate Legal Notices, as required under
 * Section 5 of the GNU Affero General Public License version 3.
 *
 * In accordance with Section 7(b) of the GNU Affero General Public License
 * version 3, these Appropriate Legal Notices must retain the display of the
 * "Powered by Funambol" logo. If the display of the logo is not reasonably
 * feasible for technical reasons, the Appropriate Legal Notices must display
 * the words "Powered by Funambol".
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

       <!--        <include layout="@layout/eben_homepage_title_bar" /> -->
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fillViewport="true">
        
        <LinearLayout
            android:id="@+id/signup_main_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip">
                    
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/login_logo"
                    android:visibility="gone" />
                
                <ImageView
                    android:id="@+id/login_screen_separator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/signup_divider"
                    android:visibility="gone" />
                           
                <LinearLayout android:id="@+id/signup_container"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">
                        
                    <TextView
                        android:id="@+id/login_help_text"
                        style="@style/funambol_standard_text"
                        android:paddingBottom="2dip"
                        android:text="@string/login_help_text"
                        android:visibility="gone" />
                        
                    <TableLayout android:id="@+id/account_table"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="1"
                        android:paddingRight="8dip" 
                        android:paddingBottom="5dip">
                        
                        <TableRow android:paddingTop="3dip"
                            android:id="@+id/account_usr_row">

                            <TextView
                                style="@style/funambol_standard_text"
                                android:text="@string/usr_label"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/username"
                                android:hint="@string/user_hint"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:textSize="15dip" />

                        </TableRow>
                        
                        <TableRow android:paddingTop="3dip"
                            android:id="@+id/account_psw_row">

                            <TextView
                                style="@style/funambol_standard_text"
                                android:text="@string/psw_label"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/password"
                                android:hint="@string/pw_hint"
                                android:inputType="textPassword"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:textSize="15dip" />

                        </TableRow>
                        
                        <TableRow
                            android:id="@+id/pw_sync_set"
                            android:paddingTop="3dip">


                        <CheckBox
                            android:id="@+id/pim_pw_checkbox"
                            style="@style/ebCheckboxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginRight="4.0dip"

                            android:duplicateParentState="true" />
                        <TextView
                            android:id="@+id/pim_sync_text"
                            style="@style/NetDisk.TextAppearance.Content.BlackWhiteReverse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:duplicateParentState="true"
                            android:text="@string/eben_show_pw" />
                        </TableRow>
                        
                        
                        <TableRow
                            android:id="@+id/account_sync_url_row"
                            android:paddingTop="3dip"
                            android:visibility="gone" >

                            <TextView android:text="@string/sync_url_label" 
                                style="@style/funambol_standard_text" 
                                android:textStyle="bold"/>
                            <EditText android:id="@+id/syncUrl" 
                                android:textSize="15dip"
                                android:scrollHorizontally="true" 
                                android:singleLine="true"  />
                        </TableRow>
                        
                    </TableLayout>
                    
                    <Button android:id="@+id/login_button"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="30dip"
                            android:paddingRight="30dip"
                            android:textStyle="bold"
                            android:textSize="16dip"
                            android:text="@string/login_button"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentBottom="true"
                        android:id="@+id/login_footer">
        
                <ImageView android:layout_width="fill_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_gravity="center_horizontal"
                                   android:background="@drawable/signup_divider"/>
                               
                <LinearLayout
                    android:id="@+id/buttons_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingBottom="1dip"
                    android:paddingLeft="4dip"
                    android:paddingRight="4dip"
                    android:paddingTop="5dip"
                    android:visibility="gone" >

                    <TextView android:text="@string/login_signup_label" 
                            style="@style/funambol_standard_text" 
                            android:textStyle="bold"
                            android:textSize="16dip"
                            android:paddingRight="5dip"/>
                            
                    <Button android:id="@+id/signup_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dip"
                            android:paddingRight="20dip"
                            android:textStyle="bold"
                            android:textSize="15dip"
                            android:text="@string/signup_button"/>
                            
                </LinearLayout> 
            </LinearLayout>
    
        </LinearLayout>
    </ScrollView>

</LinearLayout>
